2003-08-01  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/topdocs/INSTALL.texi (Top): Documentation of the
	current ugly installation method for PFA fonts.

2003-07-31  Heikki Junes <hjunes@cc.hut.fi>

        * lilypond-mode.el: Junk LilyPond-quick-notes-insert; instruct 
	to use LilyPond Quick Insert Mode by Nicolas Sceaux, instead.

	* Documentation/user/music-glossary.tely: update legato.

2003-07-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lexer-gcc-3.0.patch: Remove.

	* lexer-gcc-3.1.sh: Disable FlexLexer.h massaging.

2003-07-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* debian/rules (binary-arch): remove NEWS.

2003-07-30  Heikki Junes <hjunes@cc.hut.fi>

	* buildscripts/{ many }, lily/main.cc, po/{ all }, scripts{ many },
	stepmake/bin{ many }: polish the `--help's of different scripts;
	model taken from the core-utils of Linux.

	* flower/getopt-long.cc, python/lilylib.py: add space, see above.

2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* flower/parse-afm.cc (parseCharMetrics): add warnings.

	* flower/libc-extension.cc: idem.

	* flower/include/libc-extension.hh: protect against isinf macros.

2003-07-29  Heikki Junes <hjunes@cc.hut.fi>

        * { many }: Use two uppercase letters in LilyPond.

	* lily/main.cc, po/{ many }, scripts/{ many }: add verbs.

	* VERSION: 1.7.29 released.
	
2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/tie.cc: add TODO comment.

	* lily/bezier.cc: replace bezier-bow with bezier-sandwich.

	* scm/*.scm: remove bezier-bow. Use bezier-sandwich with rounded
	linejoins and linecaps. This fixes problems with occasional spikes
	on slur/tie endings.
	
	* input/regression/font-name.ly: don't use PS fonts for
	compatibility reasons. 

	* mutopia/claop.py (accents): update to 1.8

	* Documentation/user/music-glossary.tely (Top): remove 13pt.

	* Documentation/user/macros.itexi: don't color glossary links.

	* Documentation/user/invoking.itexi (Error messages): new section
