@@ -1,3 +1,7 @@
+2003-08-01  Heikki Junes <hjunes@cc.hut.fi>
+
+        * lilypond-mode.el: Add each word to regexps only once.
+
 2003-08-01  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
 
 	* Documentation/topdocs/INSTALL.texi (Top): Documentation of the
